--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Profile</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
         body {
             background-color: #f4f6f9;
@@ -70,8 +71,8 @@
         </tr>
     </table>
 
-    <a href="/edit-profile" class="btn btn-primary btn-custom">Edit Profile</a>
-    <a href="/dashboard" class="btn btn-secondary btn-custom mt-2">Back</a>
+    <a href="/edit-profile" class="btn btn-primary btn-custom"><i class="fas fa-user-edit"></i> Edit Profile</a>
+    <a href="/dashboard" class="btn btn-secondary btn-custom mt-2"><i class="fas fa-arrow-left me-2"></i>Back</a>
 </div>
 
 <script>
