--- a/templates/heart_prediction.html
+++ b/templates/heart_prediction.html
@@ -7,6 +7,8 @@
   <title>Heart Disease Prediction</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
   <style>
     body {
@@ -31,6 +33,11 @@
     .result-table {
       margin-top: 20px;
       display: none;
+    }
+
+    .modal-content {
+      border: 6px solid #1fe0b0;
+      border-radius: 10px;
     }
   </style>
 </head>
@@ -158,14 +165,40 @@
         </thead>
         <tbody id="resultBody"></tbody>
       </table>
+      <button type="button" id="adviceBtn" class="btn btn-success mt-3" data-bs-toggle="modal"
+        data-bs-target="#staticBackdrop" style="display: inline-block;">
+        <i class="fas fa-notes-medical me-2"></i>See Advices
+      </button>
       <button id="downloadPdf" class="btn btn-success btn-custom mt-2"><i class="fas fa-download me-2"></i>Download
         Report</button>
     </div>
   </div>
 
+
+  <!-- modal for advises start-->
+  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="staticBackdropLabel"></h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body" id="adviceContent">
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- modal for advises End-->
+
   <!-- jsPDF libraries -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
     // When the Predict form is submitted:
@@ -199,9 +232,13 @@
       }
     };
 
+
+    let globalFormData = null;
+
     document.getElementById("heartForm").addEventListener("submit", function (event) {
       event.preventDefault();
       let formData = new FormData(this);
+      globalFormData = formData
 
       fetch("/heart_prediction", {
         method: "POST",
@@ -223,9 +260,13 @@
 
           // Display the prediction and advice
           resultBody.innerHTML += `<tr><td><strong>Prediction</strong></td><td><strong>${data.prediction}</strong></td></tr>`;
-          resultBody.innerHTML += `<tr><td><strong>Advice</strong></td><td>${data.advice.replace(/\n/g, '<br>')}</td></tr>`;
+          // resultBody.innerHTML += `<tr><td><strong>Advice</strong></td><td>${data.advice.replace(/\n/g, '<br>')}</td></tr>`;
 
           resultTable.style.display = "block";
+
+          //integrating modal data
+          document.getElementById('staticBackdropLabel').innerText = data.decission; 
+          document.getElementById('adviceContent').innerHTML = data.advice; 
 
           // Automatically generate and save the PDF to server without triggering a download.
           generateAndSavePDF(formData, data.prediction, data.advice);
@@ -318,8 +359,38 @@
         }
       });
       doc.text("Prediction Result: " + predictionText, 14, finalY);
-      // Manually trigger download of the PDF
-      doc.save("heart_report.pdf");
+
+      // adding the advices to thr pdf:
+      fetch("heart_prediction", {
+        method: "POST",
+        body: new URLSearchParams(globalFormData)
+      })
+        .then(response => response.json())
+        .then(data => {
+          const adviceHtml = data.advice;
+          const adviceText = adviceHtml
+          .replace(/<li>/g, '• ')
+          .replace(/<h6[^>]*>/g, '# ') 
+          .replace(/<[^>]+>/g, '');
+
+          const wrappedAdvice = doc.splitTextToSize(adviceText, 180);
+          const lineHeight = 4.5;
+          const requiredHeight = wrappedAdvice.length * lineHeight;
+          let y = finalY + 10;
+
+          if (y + requiredHeight > doc.internal.pageSize.height - 10) {
+            doc.addPage();
+            y = 20;
+          }
+
+          doc.setFontSize(16);
+          doc.text("Trusted Advices For You :", 14, y);
+
+          doc.setFontSize(10);
+          doc.text(wrappedAdvice, 14, y + 6);
+
+          doc.save("Heart Disease Prediction Report.pdf");
+        });
     });
   </script>
 </body>
