--- a/templates/kidney.html
+++ b/templates/kidney.html
@@ -81,7 +81,7 @@
 
 <body>
   <div class="container">
-    <h2 class="text-center"><i class="fas fa-heartbeat me-2"></i>Chronic Kidney Disease Prediction</h2>
+    <h2 class="text-center"><i class="fas fa-heartbeat"></i>Chronic Kidney Disease Prediction</h2>
     <form id="kidneyForm">
       <div class="row">
         <!-- Left Column -->
